Fixes navigation alignment issue, ticket DT-702

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -86,7 +86,6 @@ body {
         }
         ul {
             display: table;
-            float: none;
             margin: 0 auto;
             text-align: center;
             padding: 1em 0 0;
